Fixed stuck on when losing the last avatarLife

--- a/src/deepDown/resource/stylesheet.css
+++ b/src/deepDown/resource/stylesheet.css
@@ -1,5 +1,5 @@
 #level, #nameText, #totScoreText{
-  -fx-font: 22px Verdana;
+  -fx-font: 30px Verdana;
   -fx-font-weight: bold;
 }
 
